--- a/TableViewDemoList/Base.lproj/Main.storyboard
+++ b/TableViewDemoList/Base.lproj/Main.storyboard
@@ -1,14 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TableViewDemoList" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +22,67 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="165" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="phE-3W-8gQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="165" id="n6E-dk-FRS" customClass="ViewControllerTableViewCell" customModule="TableViewDemoList" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="165"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n6E-dk-FRS" id="UQP-Vf-rh9">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="164"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e8Z-2s-8en">
+                                                    <rect key="frame" x="14" y="0.0" width="190" height="156"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="e8Z-2s-8en" secondAttribute="height" multiplier="95:78" id="63W-mM-gv0"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0a-Nc-TfT">
+                                                    <rect key="frame" x="226" y="66" width="141" height="27"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="l0a-Nc-TfT" secondAttribute="height" multiplier="47:9" id="8fY-zn-ZRd"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="l0a-Nc-TfT" firstAttribute="trailing" secondItem="UQP-Vf-rh9" secondAttribute="trailingMargin" id="J2G-WM-f1a"/>
+                                                <constraint firstItem="e8Z-2s-8en" firstAttribute="top" secondItem="UQP-Vf-rh9" secondAttribute="top" id="Mlh-EU-puh"/>
+                                                <constraint firstAttribute="bottom" secondItem="e8Z-2s-8en" secondAttribute="bottom" constant="8" id="OqY-Ox-Ok4"/>
+                                                <constraint firstItem="l0a-Nc-TfT" firstAttribute="top" secondItem="UQP-Vf-rh9" secondAttribute="topMargin" constant="58" id="TWW-fa-QjB"/>
+                                                <constraint firstItem="e8Z-2s-8en" firstAttribute="leading" secondItem="UQP-Vf-rh9" secondAttribute="leading" constant="14" id="cYq-Lf-pHn"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="l0a-Nc-TfT" secondAttribute="bottom" constant="63" id="dQr-TU-XdY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ImageData" destination="e8Z-2s-8en" id="nKu-ql-yI4"/>
+                                            <outlet property="LabelData" destination="l0a-Nc-TfT" id="QYR-Gr-dSw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="JqO-1e-H9r"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="i6C-xe-06U"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="phE-3W-8gQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6nq-Is-gFK"/>
+                            <constraint firstItem="phE-3W-8gQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jeV-ht-6AC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="phE-3W-8gQ" secondAttribute="bottom" id="msO-Hn-2yL"/>
+                            <constraint firstAttribute="trailing" secondItem="phE-3W-8gQ" secondAttribute="trailing" id="wxA-9w-stf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="130" y="-45"/>
         </scene>
     </scenes>
 </document>
